syntax = "proto3";

package monopoly;

import "monopoly/coordinate.proto";

message ChanceDisplay {
  string title = 1;
  string description = 2;
  optional string image = 3;
}

// move to each of the tiles sequentially and perform actions on the each
// tiles. Normally, player would only go to one tile.
message MoveToTileExtra {
  Coordinate tile = 1;
  // if teleport, the player will immediately appear at the target tile
  // without passing "GO"
  bool is_teleport = 2;
}

// pay x some money; get some money from all players; pay bank; get from bank
message MoneyExchangeExtra {
  // player, amount
  map<string, int32> exchanges = 1;
  int32 my_current_money = 2;
}

// move a specific amount of steps forward or backward
message MoveStepsExtra { int32 steps = 1; }

// add a card to collection. For example: Get out of jail free card
message CollectibleExtra {
  enum CollectibleType {
    UNSPECIFIED = 0;
    GET_OUT_OF_JAIL_FREE = 1;
  }
  CollectibleType type = 1;
}

message Chance {
  ChanceDisplay display = 1;
  oneof extra {
    bool unspecified = 2;
    MoveToTileExtra move_to_tile = 3;
    MoneyExchangeExtra money_exchange = 4;
    MoveStepsExtra move_steps = 5;
    CollectibleExtra collectible = 6;
  }
}